errorstack/tests/compile_fail/tuple_struct_error.rs
use errorstack::ErrorStack;

#[derive(ErrorStack)]
struct AppError(String);

fn main() {}
